--- a/index.html
+++ b/index.html
@@ -1,30 +1,56 @@
 <!DOCTYPE html>
-<html land ="en">
+<html land="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Personal Portfolio</title>
 
-<head>
-    <meta charset ="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content ="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Personal Portfolio</title>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
 
-<link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-</head>
+  <body>
+    <header class="header">
+      <a href="#" class="logo">Portfolio</a>
 
-<body>
-<header class="header">
-    <a href="#" class="logo">Portfolio</a>
+      <i class="bx bx-menu" id="menu-icon"></i>
 
-    <nav class="navbar">
-        <a href="#home">Home</a>
+      <nav class="navbar">
+        <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
+      </nav>
+    </header>
 
-    </nav>
-</header>
+    <!-- home section design -->
 
-</body>
-
+    <section class="home" id="home">
+      <div class="home-content">
+        <h3>Hello, It's Me</h3>
+        <h1>Joanna Jurczuk</h1>
+        <h3>And I'm a <span>Full Stack Developer</span></h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid vero
+          dolorem perferendis facilis culpa consectetur in quia?
+        </p>
+        <div class="social-media">
+<a href="#"><i class='bx bxl-linkedin'></i></a>
+<a href="#"><i class='bx bxl-github' ></i></a>
+<a href="#"></a>
+<a href="#"></a>
+        </div>
+        <a href="#" class="btn">Download CV</a>
+      </div>
+<div class="home-img">
+    <img src="images/portret.png" alt="">
+</div>
+    </section>
+  </body>
 </html>
