--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
         <div class="social-media">
 <a href="#"><i class='bx bxl-linkedin'></i></a>
 <a href="#"><i class='bx bxl-github' ></i></a>
-<a href="#"></a>
-<a href="#"></a>
+
         </div>
         <a href="#" class="btn">Download CV</a>
       </div>
@@ -52,5 +51,15 @@
     <img src="images/portret.png" alt="">
 </div>
     </section>
+
+<!-- about section design  -->
+
+<section class="about" id="about">
+    <div class="about-img">
+
+    </div>
+</section>
+
+<script src="js/script.js"></script>
   </body>
 </html>
