about content added

--- a/index.html
+++ b/index.html
@@ -56,6 +56,53 @@
 
 <section class="about" id="about">
     <div class="about-img">
+<img src="images/portret.png" alt="">
+    </div>
+
+    <div class="about-content">
+       <h2 class="heading">About <span>Me</span></h2>
+    <h3>Full Stack Developer</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, magnam officia in excepturi ipsum, nihil neque velit nemo iste qui aliquam nulla nostrum corrupti odio sapiente ducimus. Iusto molestiae mollitia, laboriosam ipsum omnis voluptatibus facere provident ex eveniet dignissimos et. Sequi, voluptatum quia reiciendis sunt nihil consectetur ipsum provident, laborum culpa repellendus odio architecto molestias obcaecati, similique quis voluptate iusto harum. Rem eligendi ex at beatae asperiores est autem, dolorum a. Assumenda?</p>
+    <a href="#" class="btn">Read More</a>
+    </div>
+</section>
+
+<!-- services section design -->
+<section class="services" id="services">
+    <h2 class="heading">My <span>Services</span></h2>
+    <div class="services-container">
+       <div class="services box">
+        <i class='bx bx-code-alt'></i>
+        <h3>Web Development</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque omnis eveniet culpa. At temporibus cumque vel? Porro vel voluptatibus temporibus, obcaecati pariatur consequuntur vero blanditiis molestiae hic illum tempora fugit doloremque expedita facere unde, eius, in earum alias delectus aspernatur voluptas. Voluptatem quia veritatis voluptas similique quibusdam maiores molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim obcaecati quisquam debitis, repudiandae impedit minus nulla! Temporibus soluta ad exercitationem laboriosam dolore!</p>
+        <a href="" class="btn">Read More</a>
+
+       </div>
+
+       <div class="services box">
+     <i class='bx bx-data' ></i>
+        <h3>Create Database</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque omnis eveniet culpa. At temporibus cumque vel? Porro vel voluptatibus temporibus, obcaecati pariatur consequuntur vero blanditiis molestiae hic illum tempora fugit doloremque expedita facere unde, eius, in earum alias delectus aspernatur voluptas. Voluptatem quia veritatis voluptas similique quibusdam maiores molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim obcaecati quisquam debitis, repudiandae impedit minus nulla! Temporibus soluta ad exercitationem laboriosam dolore!</p>
+        <a href="" class="btn">Read More</a>
+
+       </div>
+
+       <div class="services box">
+    <i class='bx bx-mobile' ></i>
+        <h3>App Design</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque omnis eveniet culpa. At temporibus cumque vel? Porro vel voluptatibus temporibus, obcaecati pariatur consequuntur vero blanditiis molestiae hic illum tempora fugit doloremque expedita facere unde, eius, in earum alias delectus aspernatur voluptas. Voluptatem quia veritatis voluptas similique quibusdam maiores molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim obcaecati quisquam debitis, repudiandae impedit minus nulla! Temporibus soluta ad exercitationem laboriosam dolore!</p>
+        <a href="" class="btn">Read More</a>
+
+       </div>
+
+      <div class="services box">
+   <i class='bx bx-bug' ></i>
+        <h3>Software Testing</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque omnis eveniet culpa. At temporibus cumque vel? Porro vel voluptatibus temporibus, obcaecati pariatur consequuntur vero blanditiis molestiae hic illum tempora fugit doloremque expedita facere unde, eius, in earum alias delectus aspernatur voluptas. Voluptatem quia veritatis voluptas similique quibusdam maiores molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim obcaecati quisquam debitis, repudiandae impedit minus nulla! Temporibus soluta ad exercitationem laboriosam dolore!</p>
+        <a href="" class="btn">Read More</a>
+
+       </div>
+
 
     </div>
 </section>
