services-container added

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <section class="services" id="services">
     <h2 class="heading">My <span>Services</span></h2>
     <div class="services-container">
-       <div class="services box">
+       <div class="services-box">
         <i class='bx bx-code-alt'></i>
         <h3>Web Development</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque omnis eveniet culpa. At temporibus cumque vel? Porro vel voluptatibus temporibus, obcaecati pariatur consequuntur vero blanditiis molestiae hic illum tempora fugit doloremque expedita facere unde, eius, in earum alias delectus aspernatur voluptas. Voluptatem quia veritatis voluptas similique quibusdam maiores molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim obcaecati quisquam debitis, repudiandae impedit minus nulla! Temporibus soluta ad exercitationem laboriosam dolore!</p>
@@ -79,7 +79,7 @@
 
        </div>
 
-       <div class="services box">
+       <div class="services-box">
      <i class='bx bx-data' ></i>
         <h3>Create Database</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque omnis eveniet culpa. At temporibus cumque vel? Porro vel voluptatibus temporibus, obcaecati pariatur consequuntur vero blanditiis molestiae hic illum tempora fugit doloremque expedita facere unde, eius, in earum alias delectus aspernatur voluptas. Voluptatem quia veritatis voluptas similique quibusdam maiores molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim obcaecati quisquam debitis, repudiandae impedit minus nulla! Temporibus soluta ad exercitationem laboriosam dolore!</p>
@@ -87,7 +87,7 @@
 
        </div>
 
-       <div class="services box">
+       <div class="services-box">
     <i class='bx bx-mobile' ></i>
         <h3>App Design</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque omnis eveniet culpa. At temporibus cumque vel? Porro vel voluptatibus temporibus, obcaecati pariatur consequuntur vero blanditiis molestiae hic illum tempora fugit doloremque expedita facere unde, eius, in earum alias delectus aspernatur voluptas. Voluptatem quia veritatis voluptas similique quibusdam maiores molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim obcaecati quisquam debitis, repudiandae impedit minus nulla! Temporibus soluta ad exercitationem laboriosam dolore!</p>
@@ -95,7 +95,7 @@
 
        </div>
 
-      <div class="services box">
+      <div class="services-box">
    <i class='bx bx-bug' ></i>
         <h3>Software Testing</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque omnis eveniet culpa. At temporibus cumque vel? Porro vel voluptatibus temporibus, obcaecati pariatur consequuntur vero blanditiis molestiae hic illum tempora fugit doloremque expedita facere unde, eius, in earum alias delectus aspernatur voluptas. Voluptatem quia veritatis voluptas similique quibusdam maiores molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim obcaecati quisquam debitis, repudiandae impedit minus nulla! Temporibus soluta ad exercitationem laboriosam dolore!</p>
