--- a/index.html
+++ b/index.html
@@ -107,6 +107,42 @@
     </div>
 </section>
 
+<!-- portfolio section -->
+
+<section class="portfolio" id="portfolio">
+    <h2 class="heading">Latest <span> Project</span></h2>
+    <div class="portfolio-container">
+         <div class="portfolio-box">
+            <img src="images/tv-show.png" alt="" width="100%">
+        <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo soluta enim accusamus similique perferendis, tempore et nulla ducimus, quos sequi doloribus! Nisi, atque quaerat sequi, omnis impedit iste debitis porro exercitationem, sit cum dignissimos laboriosam hic deleniti beatae officiis minus voluptatibus a autem quasi! Debitis laudantium obcaecati, laboriosam ipsum aspernatur veniam similique nulla eveniet, aliquam, mollitia dolorum. Illum ducimus officiis unde deleniti minus eum rem eligendi, dolorum suscipit itaque nesciunt ipsum quae.</p>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+        </div>
+        </div>
+  
+         <div class="portfolio-box">
+            <img src="images/language-exchange.png" alt="" width="100%">
+        <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo soluta enim accusamus similique perferendis, tempore et nulla ducimus, quos sequi doloribus! Nisi, atque quaerat sequi, omnis impedit iste debitis porro exercitationem, sit cum dignissimos laboriosam hic deleniti beatae officiis minus voluptatibus a autem quasi! Debitis laudantium obcaecati, laboriosam ipsum aspernatur veniam similique nulla eveniet, aliquam, mollitia dolorum. Illum ducimus officiis unde deleniti minus eum rem eligendi, dolorum suscipit itaque nesciunt ipsum quae.</p>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+        </div>
+        </div>
+
+                 <div class="portfolio-box">
+            <img src="images/hotelapp.png" alt="" width="100%">
+        <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo soluta enim accusamus similique perferendis, tempore et nulla ducimus, quos sequi doloribus! Nisi, atque quaerat sequi, omnis impedit iste debitis porro exercitationem, sit cum dignissimos laboriosam hic deleniti beatae officiis minus voluptatibus a autem quasi! Debitis laudantium obcaecati, laboriosam ipsum aspernatur veniam similique nulla eveniet, aliquam, mollitia dolorum. Illum ducimus officiis unde deleniti minus eum rem eligendi, dolorum suscipit itaque nesciunt ipsum quae.</p>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+        </div>
+        </div>
+
+
+    </div>
+</section>
+
 <script src="js/script.js"></script>
   </body>
 </html>
