--- a/index.html
+++ b/index.html
@@ -41,108 +41,178 @@
           dolorem perferendis facilis culpa consectetur in quia?
         </p>
         <div class="social-media">
-<a href="#"><i class='bx bxl-linkedin'></i></a>
-<a href="#"><i class='bx bxl-github' ></i></a>
-
+          <a href="#"><i class="bx bxl-linkedin"></i></a>
+          <a href="#"><i class="bx bxl-github"></i></a>
         </div>
         <a href="#" class="btn">Download CV</a>
       </div>
-<div class="home-img">
-    <img src="images/portret.png" alt="">
-</div>
+      <div class="home-img">
+        <img src="images/portret.png" alt="" />
+      </div>
     </section>
 
-<!-- about section design  -->
+    <!-- about section design  -->
 
-<section class="about" id="about">
-    <div class="about-img">
-<img src="images/portret.png" alt="">
-    </div>
+    <section class="about" id="about">
+      <div class="about-img">
+        <img src="images/portret.png" alt="" />
+      </div>
 
-    <div class="about-content">
-       <h2 class="heading">About <span>Me</span></h2>
-    <h3>Full Stack Developer</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, magnam officia in excepturi ipsum, nihil neque velit nemo iste qui aliquam nulla nostrum corrupti odio sapiente ducimus. Iusto molestiae mollitia, laboriosam ipsum omnis voluptatibus facere provident ex eveniet dignissimos et. Sequi, voluptatum quia reiciendis sunt nihil consectetur ipsum provident, laborum culpa repellendus odio architecto molestias obcaecati, similique quis voluptate iusto harum. Rem eligendi ex at beatae asperiores est autem, dolorum a. Assumenda?</p>
-    <a href="#" class="btn">Read More</a>
-    </div>
-</section>
+      <div class="about-content">
+        <h2 class="heading">About <span>Me</span></h2>
+        <h3>Full Stack Developer</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, magnam
+          officia in excepturi ipsum, nihil neque velit nemo iste qui aliquam
+          nulla nostrum corrupti odio sapiente ducimus. Iusto molestiae
+          mollitia, laboriosam ipsum omnis voluptatibus facere provident ex
+          eveniet dignissimos et. Sequi, voluptatum quia reiciendis sunt nihil
+          consectetur ipsum provident, laborum culpa repellendus odio architecto
+          molestias obcaecati, similique quis voluptate iusto harum. Rem
+          eligendi ex at beatae asperiores est autem, dolorum a. Assumenda?
+        </p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+    </section>
 
-<!-- services section design -->
-<section class="services" id="services">
-    <h2 class="heading">My <span>Services</span></h2>
-    <div class="services-container">
-       <div class="services-box">
-        <i class='bx bx-code-alt'></i>
-        <h3>Web Development</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque omnis eveniet culpa. At temporibus cumque vel? Porro vel voluptatibus temporibus, obcaecati pariatur consequuntur vero blanditiis molestiae hic illum tempora fugit doloremque expedita facere unde, eius, in earum alias delectus aspernatur voluptas. Voluptatem quia veritatis voluptas similique quibusdam maiores molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim obcaecati quisquam debitis, repudiandae impedit minus nulla! Temporibus soluta ad exercitationem laboriosam dolore!</p>
-        <a href="" class="btn">Read More</a>
+    <!-- services section design -->
+    <section class="services" id="services">
+      <h2 class="heading">My <span>Services</span></h2>
+      <div class="services-container">
+        <div class="services-box">
+          <i class="bx bx-code-alt"></i>
+          <h3>Web Development</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque
+            omnis eveniet culpa. At temporibus cumque vel? Porro vel
+            voluptatibus temporibus, obcaecati pariatur consequuntur vero
+            blanditiis molestiae hic illum tempora fugit doloremque expedita
+            facere unde, eius, in earum alias delectus aspernatur voluptas.
+            Voluptatem quia veritatis voluptas similique quibusdam maiores
+            molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim
+            obcaecati quisquam debitis, repudiandae impedit minus nulla!
+            Temporibus soluta ad exercitationem laboriosam dolore!
+          </p>
+          <a href="" class="btn">Read More</a>
+        </div>
 
-       </div>
+        <div class="services-box">
+          <i class="bx bx-data"></i>
+          <h3>Create Database</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque
+            omnis eveniet culpa. At temporibus cumque vel? Porro vel
+            voluptatibus temporibus, obcaecati pariatur consequuntur vero
+            blanditiis molestiae hic illum tempora fugit doloremque expedita
+            facere unde, eius, in earum alias delectus aspernatur voluptas.
+            Voluptatem quia veritatis voluptas similique quibusdam maiores
+            molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim
+            obcaecati quisquam debitis, repudiandae impedit minus nulla!
+            Temporibus soluta ad exercitationem laboriosam dolore!
+          </p>
+          <a href="" class="btn">Read More</a>
+        </div>
 
-       <div class="services-box">
-     <i class='bx bx-data' ></i>
-        <h3>Create Database</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque omnis eveniet culpa. At temporibus cumque vel? Porro vel voluptatibus temporibus, obcaecati pariatur consequuntur vero blanditiis molestiae hic illum tempora fugit doloremque expedita facere unde, eius, in earum alias delectus aspernatur voluptas. Voluptatem quia veritatis voluptas similique quibusdam maiores molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim obcaecati quisquam debitis, repudiandae impedit minus nulla! Temporibus soluta ad exercitationem laboriosam dolore!</p>
-        <a href="" class="btn">Read More</a>
+        <div class="services-box">
+          <i class="bx bx-mobile"></i>
+          <h3>App Design</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque
+            omnis eveniet culpa. At temporibus cumque vel? Porro vel
+            voluptatibus temporibus, obcaecati pariatur consequuntur vero
+            blanditiis molestiae hic illum tempora fugit doloremque expedita
+            facere unde, eius, in earum alias delectus aspernatur voluptas.
+            Voluptatem quia veritatis voluptas similique quibusdam maiores
+            molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim
+            obcaecati quisquam debitis, repudiandae impedit minus nulla!
+            Temporibus soluta ad exercitationem laboriosam dolore!
+          </p>
+          <a href="" class="btn">Read More</a>
+        </div>
 
-       </div>
+        <div class="services-box">
+          <i class="bx bx-bug"></i>
+          <h3>Software Testing</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque
+            omnis eveniet culpa. At temporibus cumque vel? Porro vel
+            voluptatibus temporibus, obcaecati pariatur consequuntur vero
+            blanditiis molestiae hic illum tempora fugit doloremque expedita
+            facere unde, eius, in earum alias delectus aspernatur voluptas.
+            Voluptatem quia veritatis voluptas similique quibusdam maiores
+            molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim
+            obcaecati quisquam debitis, repudiandae impedit minus nulla!
+            Temporibus soluta ad exercitationem laboriosam dolore!
+          </p>
+          <a href="" class="btn">Read More</a>
+        </div>
+      </div>
+    </section>
 
-       <div class="services-box">
-    <i class='bx bx-mobile' ></i>
-        <h3>App Design</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque omnis eveniet culpa. At temporibus cumque vel? Porro vel voluptatibus temporibus, obcaecati pariatur consequuntur vero blanditiis molestiae hic illum tempora fugit doloremque expedita facere unde, eius, in earum alias delectus aspernatur voluptas. Voluptatem quia veritatis voluptas similique quibusdam maiores molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim obcaecati quisquam debitis, repudiandae impedit minus nulla! Temporibus soluta ad exercitationem laboriosam dolore!</p>
-        <a href="" class="btn">Read More</a>
+    <!-- portfolio section -->
 
-       </div>
-
-      <div class="services-box">
-   <i class='bx bx-bug' ></i>
-        <h3>Software Testing</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque omnis eveniet culpa. At temporibus cumque vel? Porro vel voluptatibus temporibus, obcaecati pariatur consequuntur vero blanditiis molestiae hic illum tempora fugit doloremque expedita facere unde, eius, in earum alias delectus aspernatur voluptas. Voluptatem quia veritatis voluptas similique quibusdam maiores molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim obcaecati quisquam debitis, repudiandae impedit minus nulla! Temporibus soluta ad exercitationem laboriosam dolore!</p>
-        <a href="" class="btn">Read More</a>
-
-       </div>
-
-
-    </div>
-</section>
-
-<!-- portfolio section -->
-
-<section class="portfolio" id="portfolio">
-    <h2 class="heading">Latest <span> Project</span></h2>
-    <div class="portfolio-container">
-         <div class="portfolio-box">
-            <img src="images/tv-show.png" alt="" width="100%">
-        <div class="portfolio-layer">
+    <section class="portfolio" id="portfolio">
+      <h2 class="heading">Latest <span> Project</span></h2>
+      <div class="portfolio-container">
+        <div class="portfolio-box">
+          <img src="images/language-exchange.png" alt="" width="100%" />
+          <div class="portfolio-layer">
             <h4>Web Design</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo soluta enim accusamus similique perferendis, tempore et nulla ducimus, quos sequi doloribus! Nisi, atque quaerat sequi, omnis impedit iste debitis porro exercitationem, sit cum dignissimos laboriosam hic deleniti beatae officiis minus voluptatibus a autem quasi! Debitis laudantium obcaecati, laboriosam ipsum aspernatur veniam similique nulla eveniet, aliquam, mollitia dolorum. Illum ducimus officiis unde deleniti minus eum rem eligendi, dolorum suscipit itaque nesciunt ipsum quae.</p>
-            <a href="#"><i class='bx bx-link-external'></i></a>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo
+              soluta enim accusamus similique perferendis, tempore et nulla
+              ducimus, quos sequi doloribus! Nisi, atque quaerat sequi, omnis
+              impedit iste debitis porro exercitationem, sit cum dignissimos
+              laboriosam hic deleniti beatae officiis minus voluptatibus a autem
+              quasi! Debitis laudantium obcaecati, laboriosam ipsum aspernatur
+              veniam similique nulla eveniet, aliquam, mollitia dolorum. Illum
+              ducimus officiis unde deleniti minus eum rem eligendi, dolorum
+              suscipit itaque nesciunt ipsum quae.
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
         </div>
-        </div>
-  
-         <div class="portfolio-box">
-            <img src="images/language-exchange.png" alt="" width="100%">
-        <div class="portfolio-layer">
+
+        <div class="portfolio-box">
+          <img src="images/tv-show.png" alt="" width="100%" />
+          <div class="portfolio-layer">
             <h4>Web Design</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo soluta enim accusamus similique perferendis, tempore et nulla ducimus, quos sequi doloribus! Nisi, atque quaerat sequi, omnis impedit iste debitis porro exercitationem, sit cum dignissimos laboriosam hic deleniti beatae officiis minus voluptatibus a autem quasi! Debitis laudantium obcaecati, laboriosam ipsum aspernatur veniam similique nulla eveniet, aliquam, mollitia dolorum. Illum ducimus officiis unde deleniti minus eum rem eligendi, dolorum suscipit itaque nesciunt ipsum quae.</p>
-            <a href="#"><i class='bx bx-link-external'></i></a>
-        </div>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo
+              soluta enim accusamus similique perferendis, tempore et nulla
+              ducimus, quos sequi doloribus! Nisi, atque quaerat sequi, omnis
+              impedit iste debitis porro exercitationem, sit cum dignissimos
+              laboriosam hic deleniti beatae officiis minus voluptatibus a autem
+              quasi! Debitis laudantium obcaecati, laboriosam ipsum aspernatur
+              veniam similique nulla eveniet, aliquam, mollitia dolorum. Illum
+              ducimus officiis unde deleniti minus eum rem eligendi, dolorum
+              suscipit itaque nesciunt ipsum quae.
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
         </div>
 
-                 <div class="portfolio-box">
-            <img src="images/hotelapp.png" alt="" width="100%">
-        <div class="portfolio-layer">
+        <div class="portfolio-box">
+          <img src="images/hotelapp.png" alt="" width="100%" />
+          <div class="portfolio-layer">
             <h4>Web Design</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo soluta enim accusamus similique perferendis, tempore et nulla ducimus, quos sequi doloribus! Nisi, atque quaerat sequi, omnis impedit iste debitis porro exercitationem, sit cum dignissimos laboriosam hic deleniti beatae officiis minus voluptatibus a autem quasi! Debitis laudantium obcaecati, laboriosam ipsum aspernatur veniam similique nulla eveniet, aliquam, mollitia dolorum. Illum ducimus officiis unde deleniti minus eum rem eligendi, dolorum suscipit itaque nesciunt ipsum quae.</p>
-            <a href="#"><i class='bx bx-link-external'></i></a>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo
+              soluta enim accusamus similique perferendis, tempore et nulla
+              ducimus, quos sequi doloribus! Nisi, atque quaerat sequi, omnis
+              impedit iste debitis porro exercitationem, sit cum dignissimos
+              laboriosam hic deleniti beatae officiis minus voluptatibus a autem
+              quasi! Debitis laudantium obcaecati, laboriosam ipsum aspernatur
+              veniam similique nulla eveniet, aliquam, mollitia dolorum. Illum
+              ducimus officiis unde deleniti minus eum rem eligendi, dolorum
+              suscipit itaque nesciunt ipsum quae.
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
         </div>
-        </div>
+      </div>
+    </section>
 
-
-    </div>
-</section>
-
-<script src="js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
