remove toggle icon and navbar js

--- a/index.html
+++ b/index.html
@@ -205,26 +205,31 @@
           <input type="text" placeholder="Email Address" />
         </div>
 
-          <div class="input-box">
+        <div class="input-box">
           <input type="number" placeholder="Mobile Number" />
           <input type="text" placeholder="Email Subject" />
         </div>
-<textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-<input type="submit" value="Send Message" class="btn">
-
+        <textarea
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="Your Message"
+        ></textarea>
+        <input type="submit" value="Send Message" class="btn" />
       </form>
     </section>
 
-<!-- footer design -->
-<footer class="footer">
-   <div class="footer-text">
-    <p>Copyright &copy; 2023 by Joanna | All Rights Reserved.</p>
-   </div>
+    <!-- footer design -->
+    <footer class="footer">
+      <div class="footer-text">
+        <p>Copyright &copy; 2023 by Joanna | All Rights Reserved.</p>
+      </div>
 
-   <div class="footer-iconTop">
-    <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
-   </div>
-</footer>
+      <div class="footer-iconTop">
+        <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
+      </div>
+    </footer>
 
     <script src="js/script.js"></script>
   </body>
