--- a/index.html
+++ b/index.html
@@ -231,6 +231,11 @@
       </div>
     </footer>
 
+    <!-- scroll reveal -->
+<script src="https://unpkg.com/scrollreveal"></script>
+
+
+
     <script src="js/script.js"></script>
   </body>
 </html>
