typed text js added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="home-content">
         <h3>Hello, It's Me</h3>
         <h1>Joanna Jurczuk</h1>
-        <h3>And I'm a <span>Full Stack Developer</span></h3>
+        <h3>And I'm a <span class="multiple-text"></span></h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid vero
           dolorem perferendis facilis culpa consectetur in quia?
@@ -234,6 +234,8 @@
     <!-- scroll reveal -->
 <script src="https://unpkg.com/scrollreveal"></script>
 
+<!-- typed js -->
+<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
 
     <script src="js/script.js"></script>
