--- a/index.html
+++ b/index.html
@@ -37,12 +37,17 @@
         <h1>Joanna Jurczuk</h1>
         <h3>And I'm a <span class="multiple-text"></span></h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid vero
-          dolorem perferendis facilis culpa consectetur in quia?
+          Always interested in technology and fascinated by how software works.
+          Genuinely enthusiastic about being involved in software products that
+          can make a positive impact on people's lives.
         </p>
         <div class="social-media">
-          <a href="#"><i class="bx bxl-linkedin"></i></a>
-          <a href="#"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/joanna-j-6162a823b/"
+            ><i class="bx bxl-linkedin"></i
+          ></a>
+          <a href="https://github.com/joannajurczuk94"
+            ><i class="bx bxl-github"></i
+          ></a>
         </div>
         <a href="#" class="btn">Download CV</a>
       </div>
@@ -62,14 +67,14 @@
         <h2 class="heading">About <span>Me</span></h2>
         <h3>Full Stack Developer</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, magnam
-          officia in excepturi ipsum, nihil neque velit nemo iste qui aliquam
-          nulla nostrum corrupti odio sapiente ducimus. Iusto molestiae
-          mollitia, laboriosam ipsum omnis voluptatibus facere provident ex
-          eveniet dignissimos et. Sequi, voluptatum quia reiciendis sunt nihil
-          consectetur ipsum provident, laborum culpa repellendus odio architecto
-          molestias obcaecati, similique quis voluptate iusto harum. Rem
-          eligendi ex at beatae asperiores est autem, dolorum a. Assumenda?
+          A personable and technical Full Stack Developer, I have proven
+          experience supporting complex projects from conception to completion,
+          working across multiple domains and technologies to successfully
+          deliver against product deliverables and wider company goals. Highly
+          skilled at agile development, web, and mobile development, I am adept
+          at using technical tools to create eﬀective solutions. I am now
+          looking for a role where continue to develop my skills, whilst adding
+          value within a forward thinking and dynamic organization.
         </p>
         <a href="#" class="btn">Read More</a>
       </div>
@@ -83,15 +88,14 @@
           <i class="bx bx-code-alt"></i>
           <h3>Web Development</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque
-            omnis eveniet culpa. At temporibus cumque vel? Porro vel
-            voluptatibus temporibus, obcaecati pariatur consequuntur vero
-            blanditiis molestiae hic illum tempora fugit doloremque expedita
-            facere unde, eius, in earum alias delectus aspernatur voluptas.
-            Voluptatem quia veritatis voluptas similique quibusdam maiores
-            molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim
-            obcaecati quisquam debitis, repudiandae impedit minus nulla!
-            Temporibus soluta ad exercitationem laboriosam dolore!
+            With expertise in web development, I offer professional services to
+            bring your digital presence to life. From designing visually
+            captivating interfaces to implementing robust backend functionality,
+            I strive to create dynamic and user-friendly websites tailored to
+            your unique needs. Whether it's crafting responsive layouts,
+            optimizing performance, or integrating cutting-edge technologies, I
+            am dedicated to delivering high-quality web solutions that drive
+            engagement and empower your online presence.
           </p>
           <a href="" class="btn">Read More</a>
         </div>
@@ -100,15 +104,14 @@
           <i class="bx bx-data"></i>
           <h3>Create Database</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque
-            omnis eveniet culpa. At temporibus cumque vel? Porro vel
-            voluptatibus temporibus, obcaecati pariatur consequuntur vero
-            blanditiis molestiae hic illum tempora fugit doloremque expedita
-            facere unde, eius, in earum alias delectus aspernatur voluptas.
-            Voluptatem quia veritatis voluptas similique quibusdam maiores
-            molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim
-            obcaecati quisquam debitis, repudiandae impedit minus nulla!
-            Temporibus soluta ad exercitationem laboriosam dolore!
+            Proficient in SQL and experienced with PGAdmin, I specialize in
+            developing and managing databases. With a strong command of SQL, I
+            design and optimize database structures for efficient data storage,
+            retrieval, and manipulation. Leveraging my expertise in PGAdmin, I
+            effectively administer and monitor PostgreSQL databases, ensuring
+            seamless data management. I provide comprehensive database solutions
+            that meet your specific requirements, maintaining data integrity and
+            performance.
           </p>
           <a href="" class="btn">Read More</a>
         </div>
@@ -117,15 +120,14 @@
           <i class="bx bx-mobile"></i>
           <h3>App Design</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque
-            omnis eveniet culpa. At temporibus cumque vel? Porro vel
-            voluptatibus temporibus, obcaecati pariatur consequuntur vero
-            blanditiis molestiae hic illum tempora fugit doloremque expedita
-            facere unde, eius, in earum alias delectus aspernatur voluptas.
-            Voluptatem quia veritatis voluptas similique quibusdam maiores
-            molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim
-            obcaecati quisquam debitis, repudiandae impedit minus nulla!
-            Temporibus soluta ad exercitationem laboriosam dolore!
+            Specializing in app design services, I provide professional
+            solutions to create visually captivating and user-friendly
+            interfaces. From crafting appealing layouts to ensuring seamless
+            user experiences, my commitment lies in designing mobile and web
+            applications that cater to your unique requirements. Whether it's
+            prototyping interactive designs, optimizing usability, or
+            incorporating the latest design trends, my ultimate goal is to
+            deliver high-quality app solutions that effectively engage users .
           </p>
           <a href="" class="btn">Read More</a>
         </div>
@@ -134,15 +136,14 @@
           <i class="bx bx-bug"></i>
           <h3>Software Testing</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse itaque
-            omnis eveniet culpa. At temporibus cumque vel? Porro vel
-            voluptatibus temporibus, obcaecati pariatur consequuntur vero
-            blanditiis molestiae hic illum tempora fugit doloremque expedita
-            facere unde, eius, in earum alias delectus aspernatur voluptas.
-            Voluptatem quia veritatis voluptas similique quibusdam maiores
-            molestiae hic! Unde laboriosam fugiat magnam ab, officiis nobis enim
-            obcaecati quisquam debitis, repudiandae impedit minus nulla!
-            Temporibus soluta ad exercitationem laboriosam dolore!
+            By offering software testing services, I bring my self-taught
+            knowledge and basic understanding in this field. Well versed in the
+            basics, I focus on ensuring the quality and reliability of your
+            applications. Through meticulous testing methodologies, bug
+            identification and comprehensive test case execution, I provide
+            accurate and reliable software testing solutions. With the goal of
+            delivering high-quality results, I help create reliable and
+            error-free applications.
           </p>
           <a href="" class="btn">Read More</a>
         </div>
@@ -232,11 +233,10 @@
     </footer>
 
     <!-- scroll reveal -->
-<script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
 
-<!-- typed js -->
-<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-
+    <!-- typed js -->
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
     <script src="js/script.js"></script>
   </body>
