Details about projects added

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
           <a href="https://github.com/joannajurczuk94"
             ><i class="bx bxl-github"></i
           ></a>
+
+           <a href="mailto:joannajurczuk94@gmail.com"
+            ><i class='bx bxl-gmail'></i>
+          </a>
+
         </div>
         <a href="#" class="btn">Download CV</a>
       </div>
@@ -153,44 +158,41 @@
     <!-- portfolio section -->
 
     <section class="portfolio" id="portfolio">
-      <h2 class="heading">Latest <span> Project</span></h2>
+      <h2 class="heading">Latest <span> Projects</span></h2>
       <div class="portfolio-container">
         <div class="portfolio-box">
           <img src="images/language-exchange.png" alt="" width="100%" />
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
+            <h4>The Language Exchange Programme</h4>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo
-              soluta enim accusamus similique perferendis, tempore et nulla
-              ducimus, quos sequi doloribus! Nisi, atque quaerat sequi, omnis
+             Designed the website's user interface using Figma, developed it using React, Node.js, Express.js and PostgreSQL, and deployed it using Render within a four-week deadline. Collaborated with a team of four software developers.
             </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <a href="https://starter-kit-pzcq.onrender.com/"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
         <div class="portfolio-box">
           <img src="images/tv-show.png" alt="" width="100%" />
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
+            <h4>TV Show Project</h4>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo
-              soluta enim accusamus similique perferendis, tempore et nulla
-              ducimus, quos sequi doloribus! Nisi, atque quaerat sequi, omnis
+
+Built with JavaScript, Node.js, React, HTML, and CSS, this Minimum Viable Product empowers users to stream TV shows effortlessly. It presents a range of options, allowing users to explore complete series or delve into specific episodes, resulting in an enhanced user experience and flexible content consumption.
             </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <a href="https://cyf-joannajurczuk94-tv.netlify.app/"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
         <div class="portfolio-box">
           <img src="images/hotelapp.png" alt="" width="100%" />
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
+            <h4>Hotel App</h4>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo
               soluta enim accusamus similique perferendis, tempore et nulla
               ducimus, quos sequi doloribus! Nisi, atque quaerat sequi, omnis
             </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <a href="https://cyf-joannajurczuk94-hotel-react.netlify.app/"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
       </div>
