--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
             ><i class="bx bxl-github"></i
           ></a>
 
-           <a href="mailto:joannajurczuk94@gmail.com"
-            ><i class='bx bxl-gmail'></i>
+          <a href="mailto:joannajurczuk94@gmail.com"
+            ><i class="bx bxl-gmail"></i>
           </a>
-
         </div>
-        <a href="#" class="btn">Download CV</a>
+        <a href="mailto:joannajurczuk94@gmail.com" class="btn">Contact Me</a>
       </div>
       <div class="home-img">
         <img src="images/portret.png" alt="" />
@@ -165,9 +164,14 @@
           <div class="portfolio-layer">
             <h4>The Language Exchange Programme</h4>
             <p>
-             Designed the website's user interface using Figma, developed it using React, Node.js, Express.js and PostgreSQL, and deployed it using Render within a four-week deadline. Collaborated with a team of four software developers.
+              Designed the website's user interface using Figma, developed it
+              using React, Node.js, Express.js and PostgreSQL, and deployed it
+              using Render within a four-week deadline. Collaborated with a team
+              of four software developers.
             </p>
-            <a href="https://starter-kit-pzcq.onrender.com/"><i class="bx bx-link-external"></i></a>
+            <a href="https://starter-kit-pzcq.onrender.com/"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
 
@@ -176,23 +180,32 @@
           <div class="portfolio-layer">
             <h4>TV Show Project</h4>
             <p>
-
-Built with JavaScript, Node.js, React, HTML, and CSS, this Minimum Viable Product empowers users to stream TV shows effortlessly. It presents a range of options, allowing users to explore complete series or delve into specific episodes, resulting in an enhanced user experience and flexible content consumption.
+              Built with JavaScript, Node.js, React, HTML, and CSS, this Minimum
+              Viable Product empowers users to stream TV shows effortlessly. It
+              presents a range of options, allowing users to explore complete
+              series or delve into specific episodes, resulting in an enhanced
+              user experience and flexible content consumption.
             </p>
-            <a href="https://cyf-joannajurczuk94-tv.netlify.app/"><i class="bx bx-link-external"></i></a>
+            <a href="https://cyf-joannajurczuk94-tv.netlify.app/"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
 
         <div class="portfolio-box">
-          <img src="images/hotelapp.png" alt="" width="100%" />
+          <img src="images/travelling.png" alt="" width="100%" />
           <div class="portfolio-layer">
-            <h4>Hotel App</h4>
+            <h4>Travel Website</h4>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo
-              soluta enim accusamus similique perferendis, tempore et nulla
-              ducimus, quos sequi doloribus! Nisi, atque quaerat sequi, omnis
+              This project, built with JavaScript, HTML, and CSS, is a fully
+              responsive MVP that allows users to explore travel destinations
+              and plan trips. The seamless integration of these technologies
+              ensures a consistent and user-friendly experience across all
+              devices.
             </p>
-            <a href="https://cyf-joannajurczuk94-hotel-react.netlify.app/"><i class="bx bx-link-external"></i></a>
+            <a href="https://travel-website-joanna.netlify.app/"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
       </div>
