--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               using Render within a four-week deadline. Collaborated with a team
               of four software developers.
             </p>
-            <a href="https://starter-kit-pzcq.onrender.com/"
+            <a href="https://github.com/drisshmaidi/Debuggers-Final-Project"
               ><i class="bx bx-link-external"></i
             ></a>
           </div>
