--- a/index.html
+++ b/index.html
@@ -208,6 +208,51 @@
             ></a>
           </div>
         </div>
+
+
+        <!-- extra projects -->
+
+        <div class="portfolio-box">
+          <img src="images/Group.png" alt="" width="100%" />
+          <div class="portfolio-layer">
+            <h4>Group Maker</h4>
+            <p>
+             This project, built with JavaScript, HTML, and CSS, is a fully responsive MVP that allows users to create groups with a simple click. Members of a group can be easily shuffled or mixed up without the need for any manual intervention. 
+
+            </p>
+            <a href="https://auto-group-maker.netlify.app/#aboutAGM"
+              ><i class="bx bx-link-external"></i
+            ></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="images/Pomodoro.png" alt="" width="100%" />
+          <div class="portfolio-layer">
+            <h4>Pomodoro Technique App</h4>
+            <p>
+             This project, built with JavaScript, ReactJS, HTML, and CSS is an application that help you to stay focus and productive by scheduling work and break sessions regularly. 
+            </p>
+            <a href="https://pomodoro-timer-technique.netlify.app/"
+              ><i class="bx bx-link-external"></i
+            ></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="images/cake.png" alt="" width="100%" />
+          <div class="portfolio-layer">
+            <h4>Online Cake Shop</h4>
+            <p>
+              This project, built with HTML, and CSS, is a fully
+              responsive MVP of an online cake shop, ensuring seamless user experience across various devices and screen sizes.
+            </p>
+            <a href="https://cyf-joannajurczuk94-cakewebsite.netlify.app/"
+              ><i class="bx bx-link-external"></i
+            ></a>
+          </div>
+        </div>
+
       </div>
     </section>
 
