--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="images/Pomodoro.png" alt="" width="100%" />
+          <img src="images/moneytranfer.png" alt="" width="110%" />
           <div class="portfolio-layer">
-            <h4>Pomodoro Technique App</h4>
+            <h4>Money Transfer App</h4>
             <p>
-             This project, built with JavaScript, ReactJS, HTML, and CSS is an application that help you to stay focus and productive by scheduling work and break sessions regularly. 
+             This project, built with JavaScript, HTML, and CSS is an application that allows users to transfer money around the world.
             </p>
-            <a href="https://pomodoro-timer-technique.netlify.app/"
+            <a href="https://joanna-money-transfer.netlify.app/"
               ><i class="bx bx-link-external"></i
             ></a>
           </div>
