--- a/index.html
+++ b/index.html
@@ -175,6 +175,20 @@
           </div>
         </div>
 
+            <div class="portfolio-box">
+          <img src="images/renovation.png" alt="" width="140%" height="110%"/>
+          <div class="portfolio-layer">
+            <h4>Renovation & Interior Design Website</h4>
+            <p>
+              This project, built with HTML, and CSS, is a fully
+              responsive MVP of a Renovation & Interior Design services, ensuring seamless user experience across various devices and screen sizes.
+            </p>
+            <a href="https://joanna-renovation-website.netlify.app/"
+              ><i class="bx bx-link-external"></i
+            ></a>
+          </div>
+        </div>
+
         <div class="portfolio-box">
           <img src="images/tv-show.png" alt="" width="100%" />
           <div class="portfolio-layer">
@@ -192,6 +206,19 @@
           </div>
         </div>
 
+                <div class="portfolio-box">
+          <img src="images/transfer.png" alt="" width="110%" />
+          <div class="portfolio-layer">
+            <h4>Money Transfer App</h4>
+            <p>
+             This project, built with JavaScript, HTML, and CSS is an application that allows users to transfer money around the world.
+            </p>
+            <a href="https://joanna-money-transfer.netlify.app/"
+              ><i class="bx bx-link-external"></i
+            ></a>
+          </div>
+        </div>
+        
         <div class="portfolio-box">
           <img src="images/travelling.png" alt="" width="100%" />
           <div class="portfolio-layer">
@@ -226,32 +253,9 @@
           </div>
         </div>
 
-        <div class="portfolio-box">
-          <img src="images/moneytranfer.png" alt="" width="110%" />
-          <div class="portfolio-layer">
-            <h4>Money Transfer App</h4>
-            <p>
-             This project, built with JavaScript, HTML, and CSS is an application that allows users to transfer money around the world.
-            </p>
-            <a href="https://joanna-money-transfer.netlify.app/"
-              ><i class="bx bx-link-external"></i
-            ></a>
-          </div>
-        </div>
 
-        <div class="portfolio-box">
-          <img src="images/cake.png" alt="" width="100%" />
-          <div class="portfolio-layer">
-            <h4>Online Cake Shop</h4>
-            <p>
-              This project, built with HTML, and CSS, is a fully
-              responsive MVP of an online cake shop, ensuring seamless user experience across various devices and screen sizes.
-            </p>
-            <a href="https://cyf-joannajurczuk94-cakewebsite.netlify.app/"
-              ><i class="bx bx-link-external"></i
-            ></a>
-          </div>
-        </div>
+
+    
 
       </div>
     </section>
