--- a/index.html
+++ b/index.html
@@ -240,14 +240,13 @@
         <!-- extra projects -->
 
         <div class="portfolio-box">
-          <img src="images/Group.png" alt="" width="100%" />
+          <img src="images/flowers.png" alt="" width="105%" />
           <div class="portfolio-layer">
-            <h4>Group Maker</h4>
+            <h4>Florist Online</h4>
             <p>
-             This project, built with JavaScript, HTML, and CSS, is a fully responsive MVP that allows users to create groups with a simple click. Members of a group can be easily shuffled or mixed up without the need for any manual intervention. 
-
+The project was built using JavaScript, HTML, and CSS, and describes it as a fully responsive Minimum Viable Product (MVP) for a florist shop.
             </p>
-            <a href="https://auto-group-maker.netlify.app/#aboutAGM"
+            <a href="https://joanna-flowers-website.netlify.app/"
               ><i class="bx bx-link-external"></i
             ></a>
           </div>
