--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="images/tv-show.png" alt="" width="100%" />
+          <img src="images/tv.png" alt="" width="100%" />
           <div class="portfolio-layer">
             <h4>TV Show Project</h4>
             <p>
@@ -207,7 +207,7 @@
         </div>
 
                 <div class="portfolio-box">
-          <img src="images/transfer.png" alt="" width="110%" />
+          <img src="images/money.png" alt="" width="110%" />
           <div class="portfolio-layer">
             <h4>Money Transfer App</h4>
             <p>
