--- a/index.html
+++ b/index.html
@@ -240,13 +240,13 @@
         <!-- extra projects -->
 
         <div class="portfolio-box">
-          <img src="images/flowers.png" alt="" width="105%" />
+          <img src="images/agency.png" alt="" width="105%" />
           <div class="portfolio-layer">
-            <h4>Florist Online</h4>
+            <h4>Business Strategy Website</h4>
             <p>
 The project was built using JavaScript, HTML, and CSS, and describes it as a fully responsive Minimum Viable Product (MVP) for a florist shop.
             </p>
-            <a href="https://joanna-flowers-website.netlify.app/"
+            <a href="https://agency-website-joanna.netlify.app/"
               ><i class="bx bx-link-external"></i
             ></a>
           </div>
